test/files/neg/t5702-neg-bad-xbrace.check
t5702-neg-bad-xbrace.scala:19: error: bad simple pattern: bad brace or paren after _*
          case <year>{_*)}</year> => y
                        ^
t5702-neg-bad-xbrace.scala:28: error: bad simple pattern: bad brace or paren after _*
    val <top>{a, z@_*)}</top> = xml
                     ^
two errors found
